syntax = "proto3";

package GKEgRPCService;

import "google/api/annotations.proto";

option go_package = "gke_grpc_service";

//
// The Service definition.
//

service GKEgRPCService {

    rpc Test (TestRequest) returns (TestResponse) { option (google.api.http) = { get: "/test" }; }
    rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse) { option (google.api.http) = { post: "/hello_world" body:"*" }; }

}

//
// Test
//

message TestRequest {}
message TestResponse {
    string Content = 1;
}

//
// Service parameters/returns data definition.
//

message HelloWorldRequest {
    string Name = 1;
}

message HelloWorldResponse {
    string Content = 1;
}